--- a/Resources/Private/Templates/Form/Index.html
+++ b/Resources/Private/Templates/Form/Index.html
@@ -112,8 +112,8 @@
             </f:for>
         </f:if>
 
-        <f:if condition="{subscribtionMessage}">
-            <p class="mj-success">{subscribtionMessage}</p>
+        <f:if condition="{subscriptionMessage}">
+            <p class="mj-success">{subscriptionMessage}</p>
         </f:if>
 
         <f:if condition="{submitLabel}">
