--- a/Resources/Private/Templates/Form/Response.html
+++ b/Resources/Private/Templates/Form/Response.html
@@ -12,7 +12,7 @@
             </f:if>
 
             <div class="form-group">
-                <label class="col-sm-3 control-label">{email}</label>
+                <label style="display:flex;" class="control-label">{email}</label>
                 <div class="col-sm-9">
                     <f:form.textfield property="email" type="email" class="form-control" required="1"/>
                 </div>
@@ -21,7 +21,7 @@
             <f:for each="{propertiesInfo}" as="prop" key="key">
                 <div class="form-group">
                     <f:if condition="{prop.type} != 'bool'">
-                        <label class="col-sm-3 control-label">{prop.title}</label>
+                        <label style="display:flex;" class="control-label">{prop.title}</label>
                     </f:if>
                     <div class="col-sm-9">
                         <f:switch expression="{prop.type}">
@@ -34,7 +34,7 @@
                             <f:case value="bool">
                                 <div style="display: flex">
                                     <f:form.checkbox id="{prop.contact_property}" property="{prop.input_property}" class="col-sm-2" style="display:inline; height:1.3em;" value="true"/>
-                                    <label class="control-label" for="{prop.contact_property}">{prop.title}</label>
+                                    <label class="control-label" for="{prop.contact_property}" style="padding-top: 0px;">{prop.title}</label>
                                 </div>
                             </f:case>
                             <f:case value="datetime">
@@ -44,7 +44,7 @@
                                 <f:form.textfield property="{prop.input_property}" type="text" class="form-control" required="1"/>
                             </f:defaultCase>
                         </f:switch>
-                        <label style="margin-bottom:15px;" class="col-sm-3 control-label">{prop.description}</label>
+                        <label class="control-label">{prop.description}</label>
                     </div>
                 </div>
             </f:for>
